--- a/packages/app/assets/styles/main.css
+++ b/packages/app/assets/styles/main.css
@@ -14,3 +14,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.3s ease-in-out;
+}
+.page-enter,
+.page-leave-to {
+  opacity: 0;
+}
